# Celoxica_Interview_Project

./: CMakeLists.txt  README.md
inc/: Logger.hpp  Output.hpp  Server.hpp  UniqueIdGenerator.hpp
src/: Readme.md  Server.cpp  UniqueIdGenerator.cpp  main.cpp
